--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,2 @@
-include: package:flutter_lints/flutter.yaml
-
-linter:
-  rules:
-   
+# https://pub.dev/packages/pedantic_mono
+include: package:pedantic_mono/analysis_options.yaml
