--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,26 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  device_preview: ^1.1.0
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  flutter_hooks:
+  hooks_riverpod:
+  json_serializable:
+  riverpod_annotation:
+  shared_preferences:
+  simple_logger:
 
 dev_dependencies:
+  build_runner:
+  flutter_gen_runner:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  freezed:
+  pedantic_mono:
+  riverpod_generator:
 
 flutter:
   uses-material-design: true
